Se agregan mensajes

--- a/html/system/includes.html
+++ b/html/system/includes.html
@@ -29,6 +29,7 @@
 	    <script src="{PATH_TPL}js/jPlayer/jquery.jplayer.min.js"></script>
 	    <script src="{PATH_TPL}js/jPlayer/add-on/jplayer.playlist.min.js"></script>
 	    <script src="{PATH_TPL}js/jPlayer/demo.js"></script>
+		<script src="{PATH_TPL}js/o3m.functions.template.js"></script>
 		<!-- O3M Functions -->
 		<script src="{PATH_JS}o3m.functions.js"></script>
 		<!-- MORE -->
