--- a/html/general/login.html
+++ b/html/general/login.html
@@ -6,7 +6,7 @@
 	<body class="bg-info" style="margin-top:0px;">
 		<section id="content-login" class="m-t-lg wrapper-md animated fadeInUp">
 	        <div id="form_login" class="container aside-xl"> 
-	        	<a class="navbar-brand block" href="index-2.html">
+	        	<a class="navbar-brand block" href="#">
 	        	<span class="h1 font-bold">{APP_TITLE}</span></a>
 	            <section class="m-b-lg">
 	                <header class="wrapper text-center"> 
@@ -33,7 +33,7 @@
 		                    	<small>{txt_olvido_clave}</small>
 		                    </a>
 		                </div>
-		                <div id="ajaxModal"></div>
+		                <div id="mensajes"></div>
 	                    <div class="line line-dashed"></div>
 	            </section>
 	        </div>
