--- a/html/system/frm_menu.html
+++ b/html/system/frm_menu.html
@@ -8,132 +8,85 @@
                                     <ul class="nav bg clearfix">
                                         <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Menú </li>
                                         <li>
-                                            <a href="index-2.html"> <i class="icon-disc icon text-success"></i> <span class="font-bold">What's new</span> </a>
+                                            <a href="{LINK_ACORDES}">
+                                                <i class="icon-music-tone-alt icon text-info"></i>
+                                                <span class="font-bold">Cantos</span>
+                                            </a>
                                         </li>
                                         <li>
-                                            <a href="{LINK_ACORDES}"> <i class="icon-music-tone-alt icon text-info"></i> <span class="font-bold">Cifrados</span> </a>
+                                            <a href="{LINK_ACORDES}">
+                                                <i class="icon-disc icon text-success"></i> 
+                                                <span class="font-bold">Albums</span> 
+                                            </a>
                                         </li>
                                         <li>
-                                            <a href="events.html"> <i class="icon-drawer icon text-primary-lter"></i> <b class="badge bg-primary pull-right">6</b> <span class="font-bold">Events</span> </a>
-                                        </li>
-                                        <li>
-                                            <a href="listen.html"> <i class="icon-list icon text-info-dker"></i> <span class="font-bold">Listen</span> </a>
-                                        </li>
-                                        <li>
-                                            <a href="video.html" data-target="#content" data-el="#bjax-el" data-replace="true"> <i class="icon-social-youtube icon text-primary"></i> <span class="font-bold">Video</span> </a>
+                                            <a href="{LINK_ACORDES}"> 
+                                                <i class="fa fa-users icon text-primary-lter"></i> 
+                                                <!-- <b class="badge bg-primary pull-right">6</b> -->
+                                                <span class="font-bold">Artistas</span>
+                                            </a>
                                         </li>
                                         <li class="m-b hidden-nav-xs"></li>
                                     </ul>
                                     <ul class="nav" data-ride="collapse">
-                                        <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Interface </li>
+                                        <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Captura </li>
                                         <li>
-                                            <a href="#" class="auto"> <span class="pull-right text-muted"> <i class="fa fa-angle-left text"></i> <i class="fa fa-angle-down text-active"></i> </span> <i class="icon-screen-desktop icon"> </i> <span>Layouts</span> </a>
+                                            <a href="#" class="auto"> 
+                                                <span class="pull-right text-muted"> 
+                                                    <i class="fa fa-angle-left text"></i> 
+                                                    <i class="fa fa-angle-down text-active"></i> 
+                                                </span>                                                 
+                                                <i class="icon-playlist icon text-info-dker"></i> 
+                                                <b class="badge bg-success dker pull-right">9</b>
+                                                <span>Nuevos</span> 
+                                            </a>
                                             <ul class="nav dk text-sm">
                                                 <li>
-                                                    <a href="layout-color.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Color option</span> </a>
+                                                    <a href="{LINK_ACORDES}" class="auto"> 
+                                                    <i class="fa fa-angle-right text-xs"></i>
+                                                    <b class="badge bg-info pull-right">1</b>
+                                                    <i class=" icon-music-tone icon"></i> 
+                                                    <span>Cantos</span> </a>
                                                 </li>
                                                 <li>
-                                                    <a href="layout-boxed.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Boxed layout</span> </a>
+                                                    <a href="{LINK_ACORDES}" class="auto"> 
+                                                    <i class="fa fa-angle-right text-xs"></i>
+                                                    <i class="icon-disc icon"></i> 
+                                                    <span>Albums</span> </a>
                                                 </li>
                                                 <li>
-                                                    <a href="layout-fluid.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Fluid layout</span> </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="auto"> <span class="pull-right text-muted"> <i class="fa fa-angle-left text"></i> <i class="fa fa-angle-down text-active"></i> </span> <i class="icon-chemistry icon"> </i> <span>UI Kit</span> </a>
-                                            <ul class="nav dk text-sm">
-                                                <li>
-                                                    <a href="buttons.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Buttons</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="icons.html" class="auto"> <b class="badge bg-info pull-right">369</b> <i class="fa fa-angle-right text-xs"></i> <span>Icons</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="grid.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Grid</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="widgets.html" class="auto"> <b class="badge bg-dark pull-right">8</b> <i class="fa fa-angle-right text-xs"></i> <span>Widgets</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="components.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Components</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="list.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>List group</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#table" class="auto"> <span class="pull-right text-muted"> <i class="fa fa-angle-left text"></i> <i class="fa fa-angle-down text-active"></i> </span> <i class="fa fa-angle-right text-xs"></i> <span>Table</span> </a>
-                                                    <ul class="nav dker">
-                                                        <li>
-                                                            <a href="table-static.html"> <i class="fa fa-angle-right"></i> <span>Table static</span> </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="table-datatable.html"> <i class="fa fa-angle-right"></i> <span>Datatable</span> </a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <a href="#form" class="auto"> <span class="pull-right text-muted"> <i class="fa fa-angle-left text"></i> <i class="fa fa-angle-down text-active"></i> </span> <i class="fa fa-angle-right text-xs"></i> <span>Form</span> </a>
-                                                    <ul class="nav dker">
-                                                        <li>
-                                                            <a href="form-elements.html"> <i class="fa fa-angle-right"></i> <span>Form elements</span> </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="form-validation.html"> <i class="fa fa-angle-right"></i> <span>Form validation</span> </a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="form-wizard.html"> <i class="fa fa-angle-right"></i> <span>Form wizard</span> </a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <a href="chart.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Chart</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="portlet.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Portlet</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="timeline.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Timeline</span> </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#" class="auto"> <span class="pull-right text-muted"> <i class="fa fa-angle-left text"></i> <i class="fa fa-angle-down text-active"></i> </span> <i class="icon-grid icon"> </i> <span>Pages</span> </a>
-                                            <ul class="nav dk text-sm">
-                                                <li>
-                                                    <a href="profile.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Profile</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="blog.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Blog</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="invoice.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Invoice</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="gmap.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Google Map</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="jvectormap.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Vector Map</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="signin.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Signin</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="signup.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>Signup</span> </a>
-                                                </li>
-                                                <li>
-                                                    <a href="404.html" class="auto"> <i class="fa fa-angle-right text-xs"></i> <span>404</span> </a>
+                                                    <a href="{LINK_ACORDES}" class="auto"> 
+                                                    <i class="fa fa-angle-right text-xs"></i>
+                                                    <i class="fa fa-users icon"></i> 
+                                                    <span>Artistas</span> </a>
                                                 </li>
                                             </ul>
                                         </li>
                                     </ul>
                                     <ul class="nav text-sm">
-                                        <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> <span class="pull-right"><a href="#"><i class="icon-plus i-lg"></i></a></span> Playlist </li>
+                                        <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Mahanaim Tlalpan </li>
                                         <li>
-                                            <a href="#"> <i class="icon-music-tone icon"></i> <span>Hip-Pop</span> </a>
+                                            <a href="#"> <i class="icon-home icon"></i> <span>Iglesia</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class="icon-playlist icon text-success-lter"></i> <b class="badge bg-success dker pull-right">9</b> <span>Jazz</span> </a>
+                                            <a href="#"> <i class="icon-bubbles icon"></i> 
+                                            <span>Contacto</span> </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"> <i class="icon-pointer icon"></i> 
+                                            <span>Ubicación</span> </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"> <i class=" icon-social-facebook icon text-info-dker"></i> 
+                                            <span>Facebook</span> </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"> <i class="icon-social-twitter icon text-info-dker"></i> 
+                                            <span>Twitter</span> </a>
+                                        </li>
+                                        <li>
+                                            <a href="#"> <i class="icon-social-youtube icon text-info-dker"></i> 
+                                            <span>Youtube</span> </a>
                                         </li>
                                     </ul>
                                 </nav>
