Se crean secciones públicas

--- a/html/system/frm_menu.html
+++ b/html/system/frm_menu.html
@@ -9,19 +9,19 @@
                                         <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Menú </li>
                                         <li>
                                             <a href="{LINK_ACORDES}">
-                                                <i class="icon-music-tone-alt icon text-info"></i>
+                                                <i class="icon-music-tone-alt text-info"></i>
                                                 <span class="font-bold">Cantos</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="{LINK_ACORDES}">
-                                                <i class="icon-disc icon text-success"></i> 
+                                                <i class="icon-disc text-success"></i> 
                                                 <span class="font-bold">Albums</span> 
                                             </a>
                                         </li>
                                         <li>
                                             <a href="{LINK_ACORDES}"> 
-                                                <i class="fa fa-users icon text-primary-lter"></i> 
+                                                <i class="fa fa-users text-primary-lter"></i> 
                                                 <!-- <b class="badge bg-primary pull-right">6</b> -->
                                                 <span class="font-bold">Artistas</span>
                                             </a>
@@ -66,27 +66,29 @@
                                     <ul class="nav text-sm">
                                         <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Mahanaim Tlalpan </li>
                                         <li>
-                                            <a href="#"> <i class="icon-home icon"></i> <span>Iglesia</span> </a>
+                                            <a href="{URL}iglesia/iglesia"> <i class="icon-home icon"></i> <span>Iglesia</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class="icon-bubbles icon"></i> 
+                                            <a href="{URL}iglesia/contacto"> <i class="icon-bubbles icon"></i> 
                                             <span>Contacto</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class="icon-pointer icon"></i> 
+                                            <a href="{URL}iglesia/ubicacion"> <i class="icon-pointer icon"></i> 
                                             <span>Ubicación</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class=" icon-social-facebook icon text-info-dker"></i> 
+                                            <a href="{URL}iglesia/facebook"> <i class=" icon-social-facebook icon text-info-dker"></i> 
                                             <span>Facebook</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class="icon-social-twitter icon text-info-dker"></i> 
-                                            <span>Twitter</span> </a>
+                                            <a href="{URL}iglesia/twitter"> <i class="icon-social-twitter icon text-info-dker"></i><span>Twitter</span> </a>
                                         </li>
                                         <li>
-                                            <a href="#"> <i class="icon-social-youtube icon text-info-dker"></i> 
-                                            <span>Youtube</span> </a>
+                                            <a href="{URL}iglesia/youtube"> <i class="icon-social-youtube icon text-info-dker"></i><span>Youtube</span> </a>
+                                        </li>
+                                        <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted"> Palabra Miel </li>
+                                        <li>
+                                            <a href="#"> <i class="icon-globe icon text-success-lter"></i><span>Red Palabra Miel</span> </a>
                                         </li>
                                     </ul>
                                 </nav>
