Se agrega contructor de modal

--- a/html/general/login.html
+++ b/html/general/login.html
@@ -44,5 +44,7 @@
 		        <p> <small>{txt_footer}<br/>&copy; {ANIO}</small> </p>
 		    </div>
 		</footer>
+		{POPUPS}
+		{FOOTER}
 	</body>
 </html>
