--- a/html/system/frm_header.html
+++ b/html/system/frm_header.html
@@ -1,4 +1,5 @@
 		<header class="bg-white-only header header-md navbar navbar-fixed-top-xs">
+            <input type="hidden" id="tm-out" value="{TIMEOUT}"/>
             <div class="navbar-header aside bg-info nav-xs">
                 <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="icon-list"></i> </a>
                 <a href="{LINK_INICIO}" class="navbar-brand text-lt"> 
