--- a/html/system/modal.html
+++ b/html/system/modal.html
@@ -6,9 +6,9 @@
             </div> 
             <div class="modal-body">{MODAL_CONTENIDO}</div> 
             <div class="modal-footer" style="display:{VIEW_BOTONES};"> 
-                <a href="{CERRAR_LINK}" class="btn btn-default" data-dismiss="modal" style="display:{VIEW_CERRAR};">{TXT_CERRAR}</a> 
-                <a href="{NO_LINK}" class="btn btn-default" style="display:{VIEW_NO};">{TXT_NO}</a> 
-                <a href="{SI_LINK}" class="btn btn-primary" style="display:{VIEW_SI};">{TXT_SI}</a> 
+                <a href="#" onclick="{CERRAR_LINK}" class="btn btn-default" data-dismiss="modal" style="display:{VIEW_CERRAR};">{TXT_CERRAR}</a> 
+                <a href="#" onclick="{NO_LINK}" class="btn btn-default" style="display:{VIEW_NO};">{TXT_NO}</a> 
+                <a href="#" onclick="{SI_LINK}" class="btn btn-primary" style="display:{VIEW_SI};">{TXT_SI}</a> 
             </div> 
         </div>
         <!-- /.modal-content -->
