--- a/html/system/popups.html
+++ b/html/system/popups.html
@@ -1,1 +1,2 @@
 	<div id="o3m-popups-alerts" class="o3m-popups"></div>
+	<div id="ajaxModal" class="modal fade in" aria-hidden="true" style="display: hidden;"></div>
