--- a/html/general/inicio.html
+++ b/html/general/inicio.html
@@ -1,56 +1,49 @@
 		<div id="frm-inicio"> 	
 		<!-- Inicio de contenedor -->
-			{CONTENIDO}	  
-			<div class="col-lg-6">
+			{CONTENIDO}	  			   		  
+
+			<div class="col-lg-12">
+				<!-- .crousel fade --> 
+				<section class="panel panel-default">
+				 <div class="carousel slide carousel-fade auto panel-body" id="c-fade">
+				    <ol class="carousel-indicators out">
+				       <li data-target="#c-fade" data-slide-to="0" class="active"></li>
+				       <li data-target="#c-fade" data-slide-to="1" class=""></li>
+				    </ol>
+				    <div class="carousel-inner">
+				       <div class="item active">
+			              		<img src="{PATH_IMG}mahanaimtlalpan.jpg"/>
+			           </div>
+			           <div class="item">
+			              <img src="{PATH_IMG}Logo_Tlalpan_fondo_azul.jpg"/>
+			           </div>
+				    </div>
+				    <a class="left carousel-control" href="#c-fade" data-slide="prev"> <i class="fa fa-angle-left"></i> </a> <a class="right carousel-control" href="#c-fade" data-slide="next"> <i class="fa fa-angle-right"></i> </a> 
+				 </div>
+				</section>
+				<!-- / .carousel fade --> 
+			</div>
+
+			<div class="col-lg-12">
 			  <!-- .crousel slide --> 
 			  <section class="panel panel-default">
 			     <div class="carousel slide auto panel-body" id="c-slide">
 			        <ol class="carousel-indicators out">
 			           <li data-target="#c-slide" data-slide-to="0" class="active"></li>
 			           <li data-target="#c-slide" data-slide-to="1" class=""></li>
-			           <li data-target="#c-slide" data-slide-to="2" class=""></li>
 			        </ol>
 			        <div class="carousel-inner">
 			           <div class="item active">
-			              <p class="text-center"> <em class="h4 text-mute">Save your time</em><br> <small class="text-muted">Many components</small> </p>
+			              		<img src="{PATH_IMG}mahanaimtlalpan.jpg"/>
 			           </div>
 			           <div class="item">
-			              <p class="text-center"> <em class="h4 text-mute">Nice and easy to use</em><br> <small class="text-muted">Full documents</small> </p>
-			           </div>
-			           <div class="item">
-			              <p class="text-center"> <em class="h4 text-mute">Mobile header first</em><br> <small class="text-muted">Mobile/Tablet/Desktop</small> </p>
+			              <img src="{PATH_IMG}Logo_Tlalpan_fondo_azul.jpg"/>
 			           </div>
 			        </div>
 			        <a class="left carousel-control" href="#c-slide" data-slide="prev"> <i class="fa fa-angle-left"></i> </a> <a class="right carousel-control" href="#c-slide" data-slide="next"> <i class="fa fa-angle-right"></i> </a> 
 			     </div>
 			  </section>
 			  <!-- / .carousel slide --> 
-			</div>		   		  
-
-			<div class="col-lg-6">
-				<!-- .crousel fade --> 
-				<section class="panel bg-dark">
-				 <div class="carousel slide carousel-fade panel-body" id="c-fade">
-				    <ol class="carousel-indicators out">
-				       <li data-target="#c-fade" data-slide-to="0" class=""></li>
-				       <li data-target="#c-fade" data-slide-to="1" class="active"></li>
-				       <li data-target="#c-fade" data-slide-to="2" class=""></li>
-				    </ol>
-				    <div class="carousel-inner">
-				       <div class="item">
-				          <p class="text-center"> <em class="h4 text-mute">Save your time</em><br> <small class="text-muted">Many components</small> </p>
-				       </div>
-				       <div class="item active">
-				          <p class="text-center"> <em class="h4 text-mute">Nice and easy to use</em><br> <small class="text-muted">Full documents</small> </p>
-				       </div>
-				       <div class="item">
-				          <p class="text-center"> <em class="h4 text-mute">Mobile header first</em><br> <small class="text-muted">Mobile/Tablet/Desktop</small> </p>
-				       </div>
-				    </div>
-				    <a class="left carousel-control" href="#c-fade" data-slide="prev"> <i class="fa fa-angle-left"></i> </a> <a class="right carousel-control" href="#c-fade" data-slide="next"> <i class="fa fa-angle-right"></i> </a> 
-				 </div>
-				</section>
-				<!-- / .carousel fade --> 
 			</div>
 		<!-- Fin de contenedor -->
 		</div>
