Se corrige funcion javasctipt path y se agrega variable global de folder de sistema

--- a/html/system/frm_menu.html
+++ b/html/system/frm_menu.html
@@ -116,3 +116,6 @@
                     </section>
                 </aside>
                 <!-- /.aside -->
+                <input type="hidden" id="mod" name="mod" value="{MODULE}" />
+                <input type="hidden" id="sec" name="sec" value="{SECTION}" />
+                <input type="hidden" id="app-fol" name="app-fol" value="{FOLDER}" />
