--- a/html/general/login.html
+++ b/html/general/login.html
@@ -14,6 +14,7 @@
 	                	<span style="display:block;" id="txtReloj" onload="reloj(this.id)"></span>
 	                	<input type="hidden" id="mod" name="mod" value="{MODULE}" />
 						<input type="hidden" id="sec" name="sec" value="{SECTION}" />
+						<input type="hidden" id="app-fol" name="app-fol" value="{FOLDER}" />
 	               	</header>
 	                    <div class="input-group m-b">
 	                    	<span class="input-group-addon rounded input-lg text-center no-border"><i class="icon-user"></i></span>
