Se avanza en catalogos

--- a/html/general/login.html
+++ b/html/general/login.html
@@ -30,7 +30,7 @@
 	                    </button>
 
 	                    <div class="text-center m-t m-b">
-		                    <a data-toggle="ajaxModal" href="http://localhost/iglesia/director/src/modal/modal.php?accion=modal">
+		                    <a data-toggle="ajaxModal">
 		                    	<small>{txt_olvido_clave}</small>
 		                    </a>
 		                </div>
