--- a/html/system/frm_contenido.html
+++ b/html/system/frm_contenido.html
@@ -1,5 +1,5 @@
 		<div id="contenedor-principal">		
-		<h2 class="font-thin m-b">{TITULO} 
+		<h2 class="font-thin m-b title-color">{TITULO} 
 			<span class="musicbar animate inline m-l-sm" style="width:20px;height:20px"> 
 				<span class="bar1 a1 bg-primary lter"></span> 
 				<span class="bar2 a2 bg-info lt"></span> 
