--- a/html/catalogos/categorias.html
+++ b/html/catalogos/categorias.html
@@ -1,23 +1,24 @@
-		<div id="frm-captura-categorias"> 	
+		<div id="div-contenedor"> 
+		<form id="frm-captura-categorias" class="form-horizontal" method="post" data-validate="parsley">	
 		<!-- Inicio de contenedor -->			
 			<section class="panel panel-default">
 	            <header class="panel-heading font-bold"> {txt_form} </header>
 	            <div class="panel-body">
-	                <form class="form-horizontal" method="get" data-validate="parsley">
+	                
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_categoria}:</label>
 	                        <div class="col-sm-10">
-	                            <input type="text" class="form-control" placeholder="{txt_categoria}" title="{tooltip_categoria}" data-required="true"> 
+	                            <input type="text" id="categoria" data-campo="categoria" class="form-control" placeholder="{txt_categoria}" title="{tooltip_categoria}" data-required="true"> 
 	                        </div>
-	                    </div>	                    
+	                    </div>	                   
 
 	                    <!-- Botón -->
 	                    <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button type="submit" class="btn btn-primary">{txt_agregar}</button>
+                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-categorias','categorias');">{txt_agregar}</button>
                             </div>
-                        </div>                
-	                </form>
+                        </div> 
+                        <div class="col-sm-10 col-sm-offset-2" id="mensajes"></div>
 	            </div>
 	        </section>
 	        <section class="panel panel-default">
@@ -26,4 +27,5 @@
 		        </div>
 	        </section>
 		<!-- Fin de contenedor -->
+		</form>
 		</div>
