Se termina captura de escalas

--- a/html/catalogos/escalas.html
+++ b/html/catalogos/escalas.html
@@ -6,11 +6,65 @@
 	            <div class="panel-body">
 	                
 	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_categoria}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" id="categoria" data-campo="categoria" class="form-control" placeholder="{txt_categoria}" title="{tooltip_categoria}" data-required="true"> 
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_escala}:</label>
-	                        <div class="col-sm-9">
+	                        <div class="col-sm-5">
 	                            <input type="text" id="escala" data-campo="escala" class="form-control" placeholder="{txt_escala}" title="{tooltip_escalas}" data-required="true"> 
 	                        </div>
-	                    </div>	                   
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado1}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado1} 
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado2}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado2}  
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado3}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado3}  
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado4}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado4}  
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado5}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado5} 
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado6}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado6}  
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_grado7}:</label>
+	                        <div class="col-sm-5">
+	                            {lst_grado7}  
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_armadura}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" id="armadura" data-campo="armadura" class="form-control" placeholder="{txt_armadura}" title="{tooltip_armadura}" data-required="true"> 
+	                        </div>
+	                    </div>
 
 	                    <!-- Botón -->
 	                    <div class="form-group">
