--- a/html/captura/artistas.html
+++ b/html/captura/artistas.html
@@ -1,34 +1,31 @@
-		<div id="frm-captura-cantos"> 	
+		<div id="frm-captura-artistas"> 	
 		<!-- Inicio de contenedor -->
 			<section class="panel panel-default">
 	            <header class="panel-heading font-bold"> {txt_form} </header>
 	            <div class="panel-body">
 	                <form class="form-horizontal" method="get" data-validate="parsley">
 	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_nombre}:</label>
-	                        <div class="col-sm-10">
-	                            <input type="text" class="form-control" placeholder="{txt_nombre}" title="{tooltip_nombre}" data-required="true"> 
+	                        <label class="col-sm-2 control-label">{txt_artista}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" placeholder="{txt_artista}" title="{tooltip_artista}" data-required="true"> 
 	                        </div>
 	                    </div>
-
 	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_alias}:</label>
-	                        <div class="col-sm-10">
-	                            <input type="text" class="form-control" placeholder="{txt_alias}" title="{tooltip_alias}" > 
+	                        <label class="col-sm-2 control-label">{txt_iglesia}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" placeholder="{txt_iglesia}" title="{tooltip_iglesia}" > 
 	                        </div>
 	                    </div>
-
 	                   <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_album}:</label>
-	                        <div class="col-sm-10">
-	                            {lst_albums} 
+	                        <label class="col-sm-2 control-label">{txt_ministerio}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" placeholder="{txt_ministerio}" title="{tooltip_ministerio}" > 
 	                        </div>
 	                    </div>
-
 	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_escala}:</label>
-	                        <div class="col-sm-10">
-	                            {lst_escalas} 
+	                        <label class="col-sm-2 control-label">{txt_pais}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" placeholder="{txt_pais}" title="{tooltip_pais}" > 
 	                        </div>
 	                    </div>
 
