--- a/html/captura/artistas.html
+++ b/html/captura/artistas.html
@@ -1,41 +1,42 @@
-		<div id="frm-captura-artistas"> 	
-		<!-- Inicio de contenedor -->
+		<div id="div-contenedor"> 
+		<form id="frm-captura-artistas" class="form-horizontal" method="post" data-validate="parsley">	
+		<!-- Inicio de contenedor -->			
 			<section class="panel panel-default">
 	            <header class="panel-heading font-bold"> {txt_form} </header>
 	            <div class="panel-body">
-	                <form class="form-horizontal" method="get" data-validate="parsley">
+	                
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_artista}:</label>
 	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" placeholder="{txt_artista}" title="{tooltip_artista}" data-required="true"> 
+	                            <input type="text" class="form-control" data-campo="artista" placeholder="{txt_artista}" title="{tooltip_artista}" data-required="true"> 
 	                        </div>
 	                    </div>
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_iglesia}:</label>
 	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" placeholder="{txt_iglesia}" title="{tooltip_iglesia}" > 
+	                            <input type="text" class="form-control" data-campo="iglesia" placeholder="{txt_iglesia}" title="{tooltip_iglesia}" data-required="true"> 
 	                        </div>
 	                    </div>
 	                   <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_ministerio}:</label>
 	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" placeholder="{txt_ministerio}" title="{tooltip_ministerio}" > 
+	                            <input type="text" class="form-control" data-campo="ministerio" placeholder="{txt_ministerio}" title="{tooltip_ministerio}" > 
 	                        </div>
 	                    </div>
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_pais}:</label>
 	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" placeholder="{txt_pais}" title="{tooltip_pais}" > 
+	                            <input type="text" class="form-control" data-campo="pais" placeholder="{txt_pais}" title="{tooltip_pais}" data-required="true"> 
 	                        </div>
-	                    </div>
+	                    </div>	                   
 
 	                    <!-- Botón -->
 	                    <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button type="submit" class="btn btn-primary">{txt_guardar}</button>
+                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-artistas','artistas');">{txt_agregar}</button>
                             </div>
-                        </div>                
-	                </form>
+                        </div> 
+                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
 	            </div>
 	        </section>
 	        <section class="panel panel-default">
@@ -44,4 +45,5 @@
 		        </div>
 	        </section>
 		<!-- Fin de contenedor -->
+		</form>
 		</div>
