--- a/html/captura/artistas.html
+++ b/html/captura/artistas.html
@@ -1,44 +1,49 @@
 		<div id="div-contenedor"> 
 		<form id="frm-captura-artistas" class="form-horizontal" method="post" data-validate="parsley">	
 		<!-- Inicio de contenedor -->			
-			<section class="panel panel-default">
-	            <header class="panel-heading font-bold"> {txt_form} </header>
-	            <div class="panel-body">
-	                
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_artista}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" data-campo="artista" placeholder="{txt_artista}" title="{tooltip_artista}" data-required="true"> 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_iglesia}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" data-campo="iglesia" placeholder="{txt_iglesia}" title="{tooltip_iglesia}" data-required="true"> 
-	                        </div>
-	                    </div>
-	                   <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_ministerio}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" data-campo="ministerio" placeholder="{txt_ministerio}" title="{tooltip_ministerio}" > 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_pais}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" class="form-control" data-campo="pais" placeholder="{txt_pais}" title="{tooltip_pais}" data-required="true"> 
-	                        </div>
-	                    </div>	                   
+			<div class="panel-group m-b" id="accordion1">
+				<div class="panel panel-default">
+					<div class="panel-heading font-bold"> 
+					<a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" title="{tooltip_click}"><i class="fa fa-plus-circle"></i> {txt_form} </a> 
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse" style="height: 0px;">
+						<div class="panel-body text-sm"> 
+							<div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_artista}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" class="form-control" data-campo="artista" placeholder="{txt_artista}" title="{tooltip_artista}" data-required="true"> 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_iglesia}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" class="form-control" data-campo="iglesia" placeholder="{txt_iglesia}" title="{tooltip_iglesia}" data-required="true"> 
+		                        </div>
+		                    </div>
+		                   <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_ministerio}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" class="form-control" data-campo="ministerio" placeholder="{txt_ministerio}" title="{tooltip_ministerio}" > 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_pais}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" class="form-control" data-campo="pais" placeholder="{txt_pais}" title="{tooltip_pais}" data-required="true"> 
+		                        </div>
+		                    </div>	                   
 
-	                    <!-- Botón -->
-	                    <div class="form-group">
-                            <div class="col-sm-4 col-sm-offset-2">
-                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-artistas','artistas');">{txt_agregar}</button>
-                            </div>
-                        </div> 
-                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
-	            </div>
-	        </section>
+		                    <!-- Botón -->
+		                    <div class="form-group">
+	                            <div class="col-sm-4 col-sm-offset-2">
+	                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-artistas','artistas');">{txt_agregar}</button>
+	                            </div>
+	                        </div> 
+	                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 	        <section class="panel panel-default">
 		        <div class="panel-body">
 		        	{GRID}
