--- a/html/catalogos/escalas.html
+++ b/html/catalogos/escalas.html
@@ -1,80 +1,85 @@
 		<div id="div-contenedor"> 
 		<form id="frm-captura-escalas" class="form-horizontal" method="post" data-validate="parsley">	
-		<!-- Inicio de contenedor -->			
-			<section class="panel panel-default">
-	            <header class="panel-heading font-bold"> {txt_form} </header>
-	            <div class="panel-body">
-	                
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_categoria}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="categoria" data-campo="categoria" class="form-control" placeholder="{txt_categoria}" title="{tooltip_categoria}" data-required="true"> 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_escala}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="escala" data-campo="escala" class="form-control" placeholder="{txt_escala}" title="{tooltip_escalas}" data-required="true"> 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado1}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado1} 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado2}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado2}  
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado3}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado3}  
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado4}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado4}  
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado5}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado5} 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado6}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado6}  
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_grado7}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_grado7}  
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_armadura}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="armadura" data-campo="armadura" class="form-control" placeholder="{txt_armadura}" title="{tooltip_armadura}" data-required="true"> 
-	                        </div>
-	                    </div>
+		<!-- Inicio de contenedor -->	
+			<div class="panel-group m-b" id="accordion1">
+				<div class="panel panel-default">
+					<div class="panel-heading font-bold"> 
+					<a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" title="{tooltip_click}"><i class="fa fa-plus-circle"></i> {txt_form} </a> 
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse" style="height: 0px;">
+						<div class="panel-body text-sm"> 
+							<div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_categoria}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="categoria" data-campo="categoria" class="form-control" placeholder="{txt_categoria}" title="{tooltip_categoria}" data-required="true"> 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_escala}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="escala" data-campo="escala" class="form-control" placeholder="{txt_escala}" title="{tooltip_escalas}" data-required="true"> 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado1}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado1} 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado2}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado2}  
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado3}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado3}  
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado4}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado4}  
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado5}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado5} 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado6}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado6}  
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_grado7}:</label>
+		                        <div class="col-sm-5">
+		                            {lst_grado7}  
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_armadura}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="armadura" data-campo="armadura" class="form-control" placeholder="{txt_armadura}" title="{tooltip_armadura}" data-required="true"> 
+		                        </div>
+		                    </div>
 
-	                    <!-- Botón -->
-	                    <div class="form-group">
-                            <div class="col-sm-4 col-sm-offset-2">
-                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-escalas','escalas');">{txt_agregar}</button>
-                            </div>
-                        </div> 
-                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
-	            </div>
-	        </section>
+		                    <!-- Botón -->
+		                    <div class="form-group">
+	                            <div class="col-sm-4 col-sm-offset-2">
+	                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-escalas','escalas');">{txt_agregar}</button>
+	                            </div>
+	                        </div> 
+	                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 	        <section class="panel panel-default">
 		        <div class="panel-body">
 		        	{GRID}
