--- a/html/catalogos/notas.html
+++ b/html/catalogos/notas.html
@@ -1,38 +1,43 @@
 		<div id="div-contenedor"> 
 		<form id="frm-captura-notas" class="form-horizontal" method="post" data-validate="parsley">	
-		<!-- Inicio de contenedor -->			
-			<section class="panel panel-default">
-	            <header class="panel-heading font-bold"> {txt_form} </header>
-	            <div class="panel-body">
-	                
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_nota_en}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="nota_en" data-campo="nota_en" class="form-control" placeholder="{txt_nota_en}" title="{tooltip_nota_en}" data-required="true"> 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_nota_es}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="nota_es" data-campo="nota_es" class="form-control" placeholder="{txt_nota_es}" title="{tooltip_nota_es}" data-required="true"> 
-	                        </div>
-	                    </div>		                    
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_alteracion}:</label>
-	                        <div class="col-sm-5">
-	                            <input type="text" id="alteracion" data-campo="alteracion" class="form-control" placeholder="{txt_alteracion}" title="{tooltip_alteracion}" data-required="true"> 
-	                        </div>
-	                    </div>                   
+		<!-- Inicio de contenedor -->	
+			<div class="panel-group m-b" id="accordion1">
+				<div class="panel panel-default">
+					<div class="panel-heading font-bold"> 
+					<a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" title="{tooltip_click}"><i class="fa fa-plus-circle"></i> {txt_form} </a> 
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse" style="height: 0px;">
+						<div class="panel-body text-sm"> 
+							<div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_nota_en}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="nota_en" data-campo="nota_en" class="form-control" placeholder="{txt_nota_en}" title="{tooltip_nota_en}" data-required="true"> 
+		                        </div>
+		                    </div>
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_nota_es}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="nota_es" data-campo="nota_es" class="form-control" placeholder="{txt_nota_es}" title="{tooltip_nota_es}" data-required="true"> 
+		                        </div>
+		                    </div>		                    
+		                    <div class="form-group">
+		                        <label class="col-sm-2 control-label">{txt_alteracion}:</label>
+		                        <div class="col-sm-5">
+		                            <input type="text" id="alteracion" data-campo="alteracion" class="form-control" placeholder="{txt_alteracion}" title="{tooltip_alteracion}" data-required="true"> 
+		                        </div>
+		                    </div>                   
 
-	                    <!-- Botón -->
-	                    <div class="form-group">
-                            <div class="col-sm-4 col-sm-offset-2">
-                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-notas','notas');">{txt_agregar}</button>
-                            </div>
-                        </div> 
-                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
-	            </div>
-	        </section>
+		                    <!-- Botón -->
+		                    <div class="form-group">
+	                            <div class="col-sm-4 col-sm-offset-2">
+	                                <button id="btnSubmit" type="button" class="btn btn-primary" onclick="insert('frm-captura-notas','notas');">{txt_agregar}</button>
+	                            </div>
+	                        </div> 
+	                        <div class="col-sm-9 col-sm-offset-2" id="mensajes"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 	        <section class="panel panel-default">
 		        <div class="panel-body">
 		        	{GRID}
