Se termina cifrados. Captura al 100%

--- a/html/captura/albums.html
+++ b/html/captura/albums.html
@@ -17,7 +17,7 @@
 		                    <div class="form-group">
 		                        <label class="col-sm-2 control-label">{txt_subtitulo}:</label>
 		                        <div class="col-sm-5">
-		                            <input type="text" id="subtitulo" class="form-control" data-campo="subtitulo" placeholder="{txt_subtitulo}" title="{tooltip_subtitulo}" data-required="true"> 
+		                            <input type="text" id="subtitulo" class="form-control" data-campo="subtitulo" placeholder="{txt_subtitulo}" title="{tooltip_subtitulo}" > 
 		                        </div>
 		                    </div>
 		                   <div class="form-group">
