--- a/html/captura/cantos.html
+++ b/html/captura/cantos.html
@@ -25,48 +25,24 @@
 	                            <input type="text" class="form-control" data-campo="autor" placeholder="{txt_autor}" title="{tooltip_autor}" data-required="true"> 
 	                        </div>
 	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_interprete}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" data-campo="interprete" placeholder="{txt_interprete}" title="{tooltip_interprete}" data-required="true"> 
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_anio}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" data-campo="anio" placeholder="{txt_anio}" title="{tooltip_anio}" data-required="true"> 
+	                        </div>
+	                    </div>
 	                   <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_album}:</label>
 	                        <div class="col-sm-5">
 	                            {lst_albums} 
 	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_escala}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_escalas} 
-	                        </div>
-	                    </div>	
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_variacion}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_variacion} 
-	                        </div>
-	                    </div> 
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_compas}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_compases} 
-	                        </div>
-	                    </div> 
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_ritmo}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_ritmos} 
-	                        </div>
-	                    </div>
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_tempo}:</label>
-	                        <div class="col-sm-5">
-	                        	<input class="slider slider-horizontal form-control" type="text" data-slider-min="1" data-slider-max="300" data-slider-step="1" value="" data-slider-value="1" data-slider-orientation="horizontal" data-campo="tempo" title="{tooltip_tempo}" style="width:300px;">
-	                        </div>
-	                    </div>  	                       
-	                    <div class="form-group">
-	                        <label class="col-sm-2 control-label">{txt_acordes}:</label>
-	                        <div class="col-sm-5">
-	                            {lst_acordes} 
-	                        </div>
-	                    </div> 
+	                    </div>	                    
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_categorias}:</label>
 	                        <div class="col-sm-5">
