--- a/html/captura/cifrados.html
+++ b/html/captura/cifrados.html
@@ -41,7 +41,7 @@
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_tempo}:</label>
 	                        <div class="col-sm-5">
-	                        	<input class="slider slider-horizontal form-control" type="text" data-slider-min="1" data-slider-max="300" data-slider-step="1" value="" data-slider-value="1" data-slider-orientation="horizontal" data-campo="tempo" title="{tooltip_tempo}" style="width:300px;">
+	                        	<input class="slider slider-horizontal form-control" type="text" data-slider-min="1" data-slider-max="300" data-slider-step="1" data-slider-value="1" data-slider-orientation="horizontal" data-campo="tempo" title="{tooltip_tempo}" style="width:300px;">
 	                        </div>
 	                    </div>  	                       
 	                    <div class="form-group">
@@ -49,7 +49,37 @@
 	                        <div class="col-sm-5">
 	                            {lst_acordes} 
 	                        </div>
-	                    </div> 	                           
+	                    </div> 	    
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_cifrado}:</label>
+	                        <div class="col-sm-5">
+	                            <textarea class="form-control parsley-validated" rows="10" data-campo="cifrado" placeholder="{txt_cifrado}" title="{tooltip_cifrado}" data-required="true"></textarea>
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_piano}:</label>
+	                        <div class="col-sm-5">
+	                            <textarea class="form-control" rows="5" data-campo="piano" placeholder="{txt_piano}" title="{tooltip_piano}" ></textarea>
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_trompeta}:</label>
+	                        <div class="col-sm-5">
+	                            <textarea class="form-control" rows="5" data-campo="trompeta" placeholder="{txt_trompeta}" title="{tooltip_trompeta}" ></textarea>
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_sax}:</label>
+	                        <div class="col-sm-5">
+	                            <textarea class="form-control" rows="5" data-campo="sax" placeholder="{txt_sax}" title="{tooltip_sax}" ></textarea>
+	                        </div>
+	                    </div>
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_comentarios}:</label>
+	                        <div class="col-sm-5">
+	                            <textarea class="form-control" rows="4" data-campo="comentarios" placeholder="{txt_comentarios}" title="{tooltip_comentarios}" ></textarea>
+	                        </div>
+	                    </div>
 
 	                    <!-- Botón -->
 	                    <div class="form-group">
