Se arregla captura cantos

--- a/html/captura/cantos.html
+++ b/html/captura/cantos.html
@@ -42,7 +42,14 @@
 	                        <div class="col-sm-5">
 	                            {lst_albums} 
 	                        </div>
-	                    </div>	                    
+	                    </div>	  
+	                    <div class="form-group">
+	                        <label class="col-sm-2 control-label">{txt_pista}:</label>
+	                        <div class="col-sm-5">
+	                            <input type="text" class="form-control" data-campo="pista" placeholder="{txt_pista}" title="{tooltip_pista}" > 
+	                        </div>
+	                    </div>
+                  
 	                    <div class="form-group">
 	                        <label class="col-sm-2 control-label">{txt_categorias}:</label>
 	                        <div class="col-sm-5">
