Se quitan requeridos

--- a/html/captura/albums.html
+++ b/html/captura/albums.html
@@ -29,19 +29,19 @@
 		                    <div class="form-group">
 		                        <label class="col-sm-2 control-label">{txt_anio}:</label>
 		                        <div class="col-sm-5">
-		                            <input type="text" id="anio" class="form-control" data-campo="anio" placeholder="{txt_anio}" title="{tooltip_anio}" data-required="true"> 
+		                            <input type="text" id="anio" class="form-control" data-campo="anio" placeholder="{txt_anio}" title="{tooltip_anio}" > 
 		                        </div>
 		                    </div>
 		                    <div class="form-group">
 		                        <label class="col-sm-2 control-label">{txt_pistas}:</label>
 		                        <div class="col-sm-5">
-		                            <input type="text" id="pistas" class="form-control" data-campo="pistas" placeholder="{txt_pistas}" title="{tooltip_pistas}" data-required="true"> 
+		                            <input type="text" id="pistas" class="form-control" data-campo="pistas" placeholder="{txt_pistas}" title="{tooltip_pistas}"> 
 		                        </div>
 		                    </div>	 
 		                    <div class="form-group">
 		                        <label class="col-sm-2 control-label">{txt_discos}:</label>
 		                        <div class="col-sm-5">
-		                            <input type="text" id="discos" class="form-control" data-campo="discos" placeholder="{txt_discos}" title="{tooltip_discos}" data-required="true"> 
+		                            <input type="text" id="discos" class="form-control" data-campo="discos" placeholder="{txt_discos}" title="{tooltip_discos}" > 
 		                        </div>
 		                    </div>	
 		                    <div class="form-group">
